# rngs

rand_jitter/: Cargo.toml
rand_jitter/src/: error.rs  lib.rs
rand_xorshift/: Cargo.toml
rand_xorshift/src/: lib.rs
