[package]
name = "rand_xorshift"
version = "0.2.1"
authors = ["The Rand Project Developers", "The Rust Project Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-random/rngs"
documentation = "https://rust-random.github.io/rand/rand_xorshift/"
homepage = "https://crates.io/crates/rand_xorshift"
description = """
Xorshift random number generator
"""
keywords = ["random", "rng", "xorshift"]
categories = ["algorithms", "no-std"]
edition = "2018"

[badges]
travis-ci = { repository = "rust-random/rngs" }
appveyor = { repository = "rust-random/rngs" }

[features]
# Unstable feature to support being a libstd dependency
rustc-dep-of-std = ["compiler_builtins", "core", "alloc"]
serde1 = ["serde"]

[dependencies]
compiler_builtins = {version = "0.1", optional = true}
core = {version = "1.0", optional = true, package = "rustc-std-workspace-core"}
alloc = {version = "1.0", optional = true, package = "rustc-std-workspace-alloc"}

rand_core = { version = "0.5.1", features = ["use_alloc", "rustc-dep-of-std"] }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
# This is for testing serde, unfortunately we can't specify feature-gated dev
# deps yet, see: https://github.com/rust-lang/cargo/issues/1596
bincode = "1"
